feat(simple-iam-server-starter): 发布1.1.0，详见CHANGELOG.1.1.0.md